--- a/index.html
+++ b/index.html
@@ -30,5 +30,36 @@
         <a href="#" class="hero__enlace">Obtener una cuenta</a>
     </section>
 
+    <!-- BUSQUEDA -->
+    <section class="busqueda">
+        <h2 class="busqueda__heading">Busca un grupo en tu ciudad</h2>
+
+        <div class="contenedor">
+            <form class="formulario">
+                <select class="formulario__campo">
+                    <option>Programación</option>
+                    <option>Diseño</option>
+                    <option>Negocios</option>
+                    <option>Moda</option>
+                    <option>Ejercicio y Salud</option>
+                    <option>Fotografía</option>
+                    <option>Comida</option>
+                    <option>Diseño Interior</option>
+                    <option>Café</option>
+                    <option>Cine</option>
+                    <option>Libros</option>
+                    <option>Emprendimiento</option>
+                </select>
+
+                <input type="text" class="formulario__campo" placeholder="Nombre Evento">        
+                <input type="text" class="formulario__campo" placeholder="Ciudad o País">
+                <input type="submit" class="formulario__submit" value="Buscar">
+
+
+            </form>
+        </div>
+
+    </section>    
+
 </body>
 </html>
