Finalizada la rama Eventos

--- a/index.html
+++ b/index.html
@@ -61,5 +61,72 @@
 
     </section>    
 
+    <!-- EVENTOS -->
+    <main class="eventos contenedor">
+        <h2 class="eventos__heading">Próximos Eventos</h2>
+
+        <div class="eventos__grid">
+            <div class="evento">
+                <a href="meeti.html">
+                    <img class="evento__imagen" src="build/img/imagen1.jpg" alt="imagen meeti">
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Viernes 1 de Septiembre de 2023</p>
+                        <h3 class="evento__nombre">Ideas de Negocios</h3>
+
+                        <div class="evento__autor">
+                            <div class="evento__autor-imagen">
+                                <img src="build/img/perfil1.jpg" alt="imagen perfil">
+                            </div>
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organizado por:</p>    
+                                <p class="evento__organizado-nombre">Juan Perez</p>    
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="evento">
+                <a href="meeti.html">
+                    <img class="evento__imagen" src="build/img/imagen2.jpg" alt="imagen meeti">
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Sábado 2 de Septiembre de 2023</p>
+                        <h3 class="evento__nombre">Bitcoins y otras cripto</h3>
+
+                        <div class="evento__autor">
+                            <div class="evento__autor-imagen">
+                                <img src="build/img/perfil2.jpg" alt="imagen perfil">
+                            </div>
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organizado por:</p>    
+                                <p class="evento__organizado-nombre">Juan Perez</p>    
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="evento">
+                <a href="meeti.html">
+                    <img class="evento__imagen" src="build/img/imagen3.jpg" alt="imagen meeti">
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Domingo 3 de Septiembre de 2023</p>
+                        <h3 class="evento__nombre">Pizza paso a paso</h3>
+
+                        <div class="evento__autor">
+                            <div class="evento__autor-imagen">
+                                <img src="build/img/perfil1.jpg" alt="imagen perfil">
+                            </div>
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organizado por:</p>    
+                                <p class="evento__organizado-nombre">Juan Perez</p>    
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+    </main>
 </body>
 </html>
